<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="27dp"
        android:text="@string/passwordTextView" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/textViewEmail"
        android:autofillHints="Количество в валюте"
        android:ems="10"
        android:hint="@string/emailEditText"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="789dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/textViewPassword"
        android:autofillHints="Количество в валюте"
        android:ems="10"
        android:hint="@string/passwordEditText"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:maxLines="1"
        android:text="@string/signInButton"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="5sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="14dp"
        android:text="@string/emailTextView" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/welcomeTextView" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>